# model_monitoring

./: Dockerfile  pyproject.toml  requirements.txt
model_monitoring/: data-drift.py
