[tool.poetry]
name = "model-monitoring"
version = "0.1.0"
description = ""
authors = ["Dragonflip <jpmarquesdeoliveira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
boto3 = "^1.28.52"
sagemaker = "^2.125.0"
evidently = "^0.4.8"
mlflow = "^2.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
